# deck-save-sync

./: .gitignore  Cargo.toml
src/: app.rs  main.rs
src/config/: config.json  default.json  test-config.json  test_config.json
src/schema/: config-schema.json
